5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1601_1804.log
== TEST (2019-04-11 21:04:20) 
-- CODE:
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = (sqrt((xb-xa)**2)+((yb-ya)**2))
print(round(dab, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dab = (sqrt((xb-xa)**2)+((yb-ya)**2))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:04:56) 
-- CODE:
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = (sqrt(xb-xa)**2+(yb-ya)**2)
print(round(dab, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dab = (sqrt(xb-xa)**2+(yb-ya)**2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:05:29) 
-- CODE:
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = sqrt((xb-xa)**2)+((yb-ya)**2)
print(round(dab, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dab = sqrt((xb-xa)**2)+((yb-ya)**2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:06:10) 
-- CODE:
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = (sqrt((xb-xa)**2)+((yb-ya)**2))
print(round(dab, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dab = (sqrt((xb-xa)**2)+((yb-ya)**2))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:06:49) 
-- CODE:
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = (sqrt(xb-xa)**2+(yb-ya)**2)
print(round(dab, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dab = (sqrt(xb-xa)**2+(yb-ya)**2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:11:49) 
-- CODE:
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = (sqrt((xb-xa)**2)+((yb-ya)**2))
print(round(dab, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dab = (sqrt((xb-xa)**2)+((yb-ya)**2))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:12:19) 
-- CODE:
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = sqrt((xb-xa)**2)+((yb-ya)**2)
print(round(dab, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dab = sqrt((xb-xa)**2)+((yb-ya)**2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:19:34) 
-- CODE:
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = (sqrt(xb-xa)**2+(yb-ya)**2)
print(round(dab, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dab = (sqrt(xb-xa)**2+(yb-ya)**2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:19:48) 
-- CODE:
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = sqrt(xb-xa)**2+(yb-ya)**2
print(round(dab, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dab = sqrt(xb-xa)**2+(yb-ya)**2
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:20:38) 
-- CODE:
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = sqrt (xb-xa)**2+(yb-ya)**2
print(round(dab, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dab = sqrt (xb-xa)**2+(yb-ya)**2
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 09:19:40) 
-- CODE:
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = sqrt((xb-xa)**2+(yb-ya)**2)
print(round(dab, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dab = sqrt((xb-xa)**2+(yb-ya)**2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 09:20:32) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = sqrt((xb-xa)**2+(yb-ya)**2)
print(round(dab, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dab = sqrt((xb-xa)**2+(yb-ya)**2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 09:22:26) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = sqrt(((xb-xa)**2)+((yb-ya)**2))
print(round(dab, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dab = sqrt(((xb-xa)**2)+((yb-ya)**2))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 09:23:27) 
-- CODE:
from  math import *
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = sqrt(((xb-xa)**2)+((yb-ya)**2))
print(round(dab, 3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 09:25:18) 
-- CODE:
from  math import *
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = sqrt(((xa-ya)**2)+((xb-yb)**2))
print(round(dab, 3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 09:25:39) 
-- CODE:
from  math import *
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite yb"))
dab = sqrt(((xa-ya)**2)+((xb-yb)**2))
print(round(dab, 3))
-- EXECUTION TIME:
0.176835
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
